# banking_api_exercise

./: README.md  alembic.ini  docker-compose.yml  env.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1a3b58935f0a_db_init.py  31f76874cbf5_init_db.py  45c1ce6fc754_cascade_added_to_transaction_history_fk_.py  6497ecd308ce_cascade_behaviour_added_to_fks_in_.py
src/: main.py
src/config/: database.py  dependencies.py  settings.py
src/contrib/: schemas.py
src/contrib/repository/: models.py
src/controller/: account.py  auth.py  client.py  transaction.py
src/model/: __init__.py  account.py  client.py  transactions.py
src/schemas/: account.py  auth.py  client.py  transactions.py
src/services/: dbservices.py  security.py
